<resources>
    <string name="app_name">JulyWorkout</string>
    <string name="pull_up_description">Подтягивания - это упражнение, чаще всего выполняемое на турнике; рабочие группы мышц: комплекс мышц рук (главным образом,предплечья, бицепсы) и спины (широчайшие).
        Чем шире хват руками за перекладину, тем больше нагрузка ложится на широчайшие мышцы спины; чем уже хват – тем больше нагрузка ложится на бицепсы. Если подтягиваться, касаясь перекладины затылком, то широчайшие мышцы растягиваются в ширину. А если подтягиваться, касаясь подбородком, то широчайшие растягиваются ещё и в толщину. При узком хвате, ладонями к себе, дополнительную нагрузку получает нижняя часть широчайших, находящаяся в районе талии.</string>
    <string name="push_up_description">Отжимания - главное упражнение для верхней части тела. Оно помогает развить силу и выносливость, нарастить мышцы, укрепить суставы, и, помимо тренировки мышц верхней части тела, помогает наладить их согласованную работу с мышцами средней и нижней частей тела.
        Ни одно упражнение не может сравниться с отжиманиями по эффективности и пользе. Тот, кто считает жим на скамье самым продуктивным силовым упражнением, глубоко заблуждается. Такой жим не только искусственно нагружает верхнюю часть тела, но и разрушает вращательную манжету плеча, травмирует локти и суставы, даже если выполняется в течение короткого периода времени. И наоборот, классические отжимания защищают суставы и развивают естественную практическую силу, необходимую не только для тренировочного зала, но и для обычной жизни.
        Именно поэтому отжимания — упражнения номер один для наращивания мускулов и силы, и именно они являются самыми распространенными упражнениями в военных тренировочных лагерях и академиях.
        И так было всегда, с тех незапамятных времен, когда античные воины готовились к сражениям.</string>
    <string name="sit_up_description">Приседания, наряду со становой тягой, создают наилучшие условия для набора силы и массы мышц всего тела. Помимо этого, приседания используются в качестве общеукрепляющего и реабилитационного упражнения.
        Поскольку во время выполнения приседаний значительная часть нагрузка ложится на мышцы-синергисты — пресс и ягодицы, это создаёт условия для опережающего развития ягодичных мышц и визуально увеличивает талию спортсменов. В бодибилдинге такое развитие мускулатуры считается несбалансированным, поэтому профессиональные бодибилдеры чаще используют для накачки ног такие упражнения как разгибания ног и жим ногами.</string>
    <string name="walking_description">Ходьба является наиболее естественным видом двигательной активности и обладает широким диапазоном положительных эффектов для здоровья. Ходьба относится, пожалуй, к числу самых популярных аэробных упражнений, так как она оказывает колоссальное позитивное влияние на здоровье и при этом не связана с риском получения травм.
        При ходьбе задействуется до 200 мышц. Она проста в исполнении и по мере прогресса допускает множество усложняющихся вариантов. Ходьба прекрасно подходит людям с низким уровнем физической подготовки, ведущим малоподвижный образ жизни, страдающим избыточным весом, находящимся в пожилом возрасте или имеющим ограничения в плане физической активности. При ходьбе нагрузка на кости и суставы меньше, чем при беге, поэтому она практически не несет опасности получения травм.</string>
    <string name="running_description">"Бег - это вид физической активности, сопровождающийся чередованием одноопорных и безопорных положений. Одноопорное положение в беге, как и при ходьбе, решающее. Маховые движения ногой здесь подчиняются тем же закономерностям, что и при ходьбе, хотя темп движения выше, и маховая нога быстрее проносится вперед для постановки на опору. Безопорное положение при беге несколько превышает по длительности одноопорное положение.
По кинематическим признакам выделяют две фазы относительного движения ног в полете - их разведение и сведение с разнонаправленным движением ног. При этом стопы каждой ноги описывают в пространстве траектории, получившие наименование задней и передней «петель», характеризующих индивидуальную технику спортсмена. Координация движений при беге строится по той же принципиальной схеме, что и при ходьбе. Траектория общего центра тяжести тела бегуна носит слабо выраженный волнообразный характер с колебаниями преимущественно в сагиттальной плоскости."</string>
    <string name="bar_description">Планка - является одним из самых популярных изометрических упражнений для проработки мышц пресса. Такие упражнения, как «поза планки», помогают укреплять выносливость стабилизирующих абдоминальных мышц. Оно может также способствовать избавлению от болей в пояснице, связанных с ослаблением функции стабилизирующих мышц туловища. Основная цель упражнения — сохранение стабилизации и сбалансированности всех частей тела. Начните с 10-секундных интервалов и постепенно переходите к 60-секундным.
        Если вы не можете удерживать «планку» в течение 30 секунд, зафиксируйте это положение на 5-10 секунд, 5 секунд отдохните и повторите столько раз, сколько необходимо, чтобы в сумме простоять 30 секунд. Каждую следующую тренировку старайтесь продержаться дольше, чтобы набирать 30 секунд за меньшее количество повторений. Если вам хочется большего разнообразия, выполняйте «планку» под углом 45 градусов, на коленях или на четвереньках—так вы постепенно дойдете до стандартной «планки».</string>
    <string name="side_bar_description">В этом упражнении задействованы «боковые» стабилизирующие мышцы, такие как средние и малые ягодичные мышцы и мышцы-аддукторы. Предостережение: не рекомендуется выполнять это упражнение тем, у кого проблемы с плечевыми суставами, поясницей. Основная цель упражнения — сохранение стабилизации и сбалансированности всех частей тела. Начните с 5-секундных интервалов и постепенно переходите к 30-секундным периодам сохранения положения в упоре боком.</string>
    <string name="lunge_description">Выпады - базовое упражнение для ног, задействует ягодицы, мышцы бедер (главным образом, квадрицепсы). Упражнение позволяет хорошо прокачать ягодицы, однако как ростостимулирующее упражнение для других мышц рассматриваться не может. Одна нога выходит вперёд, сначала опираясь на пятку, а потом на всю стопу. Выдвинутая вперёд нога в нижней точке упражнения должна быть согнута в коленном суставе под углом в 90 градусов, а колено должно находиться непосредственно над пальцами ног (не дальше, так как более короткий шаг оказывает дополнительную нагрузку на колено).
        Движение продолжается до тех пор, пока колено задней ноги не окажется примерно в сантиметре от пола.
        Шаг вперед должен быть широким, иначе в нижней точке траектории проекция колена переместится за поверхность впереди стоящей стопы, что недопустимо, так как при этом вес нагрузки переносится на коленный сустав. Опускайтесь и поднимайтесь из приседа так, словно вы приседаете на одной ноге (работает только бицепс бедра и ягодицы выставленной вперед ноги). Отставленная назад нога — лишь опора для поддержания равновесия.</string>
    <string name="crunch_description">Скручивания - изолирующие упражнения на мышцы пресса, особенно прямые мышцы живота. Именно скручивания с отягощением являются ключевым упражнением для создания рельефного пресса. Скручивание относится к категории изолирующих упражнений. Оно почти не задействует мышцы, окружающие брюшной пресс, и тренирует преимущественно верхние мышцы живота.</string>
    <string name="pull_ups">Подтягивания</string>
    <string name="push_ups">Отжимания</string>
    <string name="sit_ups">Приседания</string>
    <string name="walking">Ходьба</string>
    <string name="running">Бег</string>
    <string name="bar">Планка</string>
    <string name="side_bar">Боковая планка</string>
    <string name="lunge">Выпады</string>
    <string name="crunch">Скручивания</string>
    <string name="difficult">Сложность:</string>
    <string name="difficult_easy">V</string>
    <string name="difficult_medium">III</string>
    <string name="difficult_hard">I</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="share">Поделиться</string>

    <string name="record">Рекорд:</string>
    <string name="record_save">Рекорд сохранен</string>
    <string name="null_repeats">Вы сделали ноль повторений</string>
    <string name="record_not_save">Вы не побили предыдущий рекорд</string>
    <string name="record_delete">Рекорд удалён</string>
    <string name="todo">TODO</string>
    <string name="num_null">0</string>
    <string name="empty_string"> </string>
    <string name="favorites">Избранное</string>

</resources>
