<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/layout_margin_16dp"
    android:layout_marginRight="@dimen/layout_margin_16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".fragments.WorkoutDetailFragment">

        <TextView
            android:id="@+id/workout_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_8dp"
            android:textAlignment="center"
            android:textSize="@dimen/text_medium_headline"
            tools:text="Название упражнения" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/workout_detail_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/todo" />

            <ImageView
                android:id="@+id/workout_detail_popup_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/layout_margin_12dp"
                android:layout_marginRight="@dimen/layout_margin_12dp"
                android:layout_marginTop="@dimen/layout_margin_8dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_more_vert_black_24dp" />
        </FrameLayout>

        <TextView
            android:id="@+id/workout_detail_repeats_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_8dp"
            android:text="@string/num_null"
            android:textAlignment="center"
            android:textSize="@dimen/text_big_headline"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/workout_detail_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_8dp"
            android:max="200"
            android:min="0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_8dp"
            android:orientation="horizontal">

            <TextView
                style="@style/WorkoutDetailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/record" />

            <TextView
                android:id="@+id/workout_detail_record"
                style="@style/WorkoutDetailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/workout_detail_current_date_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_high_medium_font" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/workout_detail_time"
                style="@style/WorkoutDetailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/workout_detail_dif"
                style="@style/WorkoutDetailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/workout_detail_difficult"
                android:layout_alignRight="@id/workout_detail_difficult"
                android:paddingEnd="@dimen/padding_4dp"
                android:paddingRight="@dimen/padding_4dp"
                android:text="@string/difficult" />

            <TextView
                android:id="@+id/workout_detail_difficult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/layout_margin_12dp"
                android:paddingLeft="@dimen/padding_4dp"
                android:paddingStart="@dimen/padding_4dp"
                android:textSize="@dimen/text_high_medium_font"
                tools:text="@string/difficult_easy" />
        </RelativeLayout>

        <TextView
            android:id="@+id/workout_detail_description"
            style="@style/WorkoutDetailTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/layout_margin_8dp" />

        <FrameLayout
            android:id="@+id/workout_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </FrameLayout>
    </LinearLayout>
</ScrollView>