<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/workout_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/layout_margin_4dp"
    android:layout_marginLeft="@dimen/layout_margin_16dp"
    android:layout_marginRight="@dimen/layout_margin_16dp"
    android:layout_marginTop="@dimen/layout_margin_4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/list_item_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin_4dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@mipmap/push_up_preview" />

        <TextView
            android:id="@+id/list_item_difficult"
            style="@style/ListItemTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_8dp"
            android:text="V"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_large_font"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/list_item_title"
            style="@style/ListItemTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/list_item_image"
            android:background="@color/color_grey"
            android:maxLines="2"
            android:text="@string/push_ups"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_large_font"
            android:textStyle="bold" />

        <TextView
            style="@style/ListItemTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/list_item_image"
            android:layout_alignParentRight="true"
            android:drawableLeft="@drawable/ic_timer_white_24dp"
            android:drawableStart="@drawable/ic_timer_white_24dp"
            android:text="00:05:00"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_medium_font"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/list_item_popup_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="@dimen/layout_margin_4dp"
            android:layout_marginRight="@dimen/layout_margin_4dp"
            android:layout_marginTop="@dimen/layout_margin_8dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_more_vert_white_24dp" />

        <TextView
            android:id="@+id/list_item_description"
            style="@style/ListItemTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/list_item_image"
            android:maxLines="4"
            android:text="@string/push_up_description"
            android:textSize="@dimen/text_medium_font" />

        <View
            android:id="@+id/horizontal_separator"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/list_item_description"
            android:layout_marginBottom="@dimen/layout_margin_4dp"
            android:layout_marginLeft="@dimen/layout_margin_8dp"
            android:layout_marginRight="@dimen/layout_margin_8dp"
            android:layout_marginTop="@dimen/layout_margin_4dp"
            android:background="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/horizontal_separator"
            android:layout_marginBottom="@dimen/layout_margin_4dp"
            android:layout_marginLeft="@dimen/layout_margin_4dp"
            android:layout_marginRight="@dimen/layout_margin_4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/list_item_record_date"
                style="@style/ListItemRecordStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_calendar_black"
                android:drawableStart="@drawable/ic_calendar_black"
                android:text="27.07.2018" />

            <TextView
                android:id="@+id/list_item_record_repeats"
                style="@style/ListItemRecordStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_rewards_trophy_black"
                android:drawableStart="@drawable/ic_rewards_trophy_black"
                android:text="20" />
        </LinearLayout>
    </RelativeLayout>

</android.support.v7.widget.CardView>